[gd_scene load_steps=2 format=3 uid="uid://3aguah4b0deu"]

[ext_resource type="Script" path="res://main.gd" id="1_wvq8q"]

[node name="Main" type="Node2D"]
script = ExtResource("1_wvq8q")

[node name="Play" type="Button" parent="."]
texture_filter = 2
offset_left = 247.0
offset_top = 14.0
offset_right = 747.0
offset_bottom = 114.0
size_flags_horizontal = 0
text = "play
"

[node name="Level Select" type="Button" parent="."]
texture_filter = 2
offset_left = 241.0
offset_top = 136.0
offset_right = 741.0
offset_bottom = 236.0
text = "Level Select
"

[node name="Options" type="Button" parent="."]
texture_filter = 2
offset_left = 241.0
offset_top = 258.0
offset_right = 741.0
offset_bottom = 358.0
text = "Options"

[node name="Quit" type="Button" parent="."]
texture_filter = 2
offset_left = 250.0
offset_top = 387.0
offset_right = 750.0
offset_bottom = 487.0
text = "Quit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
